# dark-magic-utils

./: CMakeLists.txt
sandbox/: main.cpp
source/: CompileTimeHash.h  Config.h  KeyValue.h  LinearAllocator.h  ScopedPointer.h  ServiceLocator.h  Singleton.h  TimerFunctions.h  TypeId.h  TypeName.h  UnrealUtils.h  Utils.h
